src/app/navbar/navbar.component.scss
@import "../../gvars.scss";

.navbar {
    z-index: 5000;
    height: var(--navbar-height);
}

.navbar-text {
  color: white;
  margin-right: 10px;
  outline: 0;
}

.navbar-text.active {
  color: rgb(120,213,215);
}

.navbar-text:hover {
  cursor: pointer;
}

.navbar-default{
    background: rgb(71,71,71);
    border-color: $default_border_color;
}

#install-button{
  display: none;
}

.navbar-default .navbar-nav > .active{
    background: rgb(216,216,216);
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
    background: rgb(216,216,216);
}

.navbar-default .navbar-nav>li>a {
    color: rgb(128,128,128);
    font-weight: 600;
}

.no-display{
    display: none !important;
}

.navbar-brand {
  padding: 0;
  margin: 0;
  margin-left: 5px;
}

#navbar-brand{
    color: #59dbd6;
    font-weight: 600;
}

#brand-name{
  margin-left: 9px;
}

.navbar-toggler {
    align-items: center;
    width: 10%;
    height: 40px;
    padding: 0;
    cursor: pointer;
    position: absolute;
    top: 8px;
}

.navbar-toggler-right {
  position: absolute;
  right: 5%;
}

.navbar-toggler-left {
  position: absolute;
  left: 5%;
}

.navbar-toggler i {
    padding: 5px;
    color: #9d9d9d;
    font-size: 20px;
}

.filter-collapse {
  z-index: 5000;
}

#filter-dropdown-toggle {
    color: #9d9d9d;
    font-size: 25px;
}

#filter-dropdown-toggle-2 {
    color: #9d9d9d;
    font-size: 20px;
}

.d-md-none{
  width: 70%;
  margin: 0;
  padding: 0;
  position: relative;
  left: 15%;
}

.nav-logo{
    display: inline-block;
    outline: 0;
}

button {
  outline: 0;
}

.weather-icon{
    height: 20px;
    display: inline-block;
}

.navbar-collapse {
  margin: .5rem -1rem;
  width: 100%;
}

.navbar-collapse.menu {
  padding: 0 1rem .5rem;
  position: absolute;
  top: var(--navbar-height);
  margin-top: 0;
  background: rgb(71,71,71);
  z-index: 5000;
}

.navbar-collapse.filter {
  position: absolute;
  margin-bottom: -.5rem;
  margin-top: 0;
  top: var(--navbar-height);
  border-bottom: $default_border_width solid $default_border_color;
}

@media (max-width: 768px){

}

@media (min-width: 768px){
    .navbar-toggler {
        display: none !important;
    }

    .navbar-nav {
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        -ms-flex-direction: row;
        flex-direction: row;
    }

    .navbar-collapse {
        display: flex !important;
        width: 100%;
        margin: 0;
    }

    .navbar-collapse.menu {
        padding: 0;
        position: static;
        top: 0;
        flex-direction: right;
    }

    .navbar-toggleable-md{
        -webkit-box-orient: horizontal;
        -webkit-box-direction: normal;
        -ms-flex-direction: row;
        flex-direction: row;
        -ms-flex-wrap: nowrap;
        flex-wrap: nowrap;
        -webkit-box-align: center;
        -ms-flex-align: center;
        align-items: center;
    }

    .d-md-none-important {
      display: none !important;
    }
}

ul li {
    border-radius: 100px;
}

li a {
    border-radius: 100px;
}

a:hover{
    text-decoration: none;
}

.views-switch {
    background: #fff;
    border: 1px solid $default_border_color;
    position: relative;
    display: inline-block;
    box-sizing: content-box;
    overflow: visible;
    width: 92px;
    height: 30px;
    padding: 0px;
    margin: 0px 10px;
    border-radius: 20px;
    cursor: pointer;
    box-shadow: rgb(223, 223, 223) 0px 0px 0px 0px inset;
    transition: 0.3s ease-out all;
    -webkit-transition: 0.3s ease-out all;
    top: -1px;
  }

  .views-switch small {
    background: rgb(71,71,71);
    border-radius: 45px;
    width: 48px;
    height: 24px;
    position: absolute;
    top: 3px;
    left: 3px;
    transition: 0.3s ease-out all;
    -webkit-transition: 0.3s ease-out all;
    z-index: 1000;
  }
  .views-switch.checked {
    background: white;
    border-color: white;
  }
  .views-switch.checked small {
    left: 41px;
  }

  .views-switch .calendar-switch {
    display:block;
    position: absolute;
    right: 10%;
    top: 4%;
    z-index: 0;
    color:#A9A9A9;
  }

  .views-switch .map-switch {
    display:none;
     z-index: 0;
    color:#fff;
    position: absolute;
    top: 4%;
    left: 10%;
  }

  .views-switch.checked .calendar-switch {
    display:none;
  }

  .views-switch.checked .map-switch {
    display:block;

  }

